--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   "scripts": {
     "dev": "tsx watch index.ts",
     "start": "tsx index.ts",
-    "build": "rm -rf dist && tsup ./index.ts --minify --format esm,cjs --dts"
+    "build": "rm -rf ./dist && tsup && cp ./.env* ./dist/"
   },
   "imports": {
     "#app/*": "./app/*.js"
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
+    "@fastify/one-line-logger": "^2.0.2",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "fastify": "^5.2.2",
     "tsx": "^4.19.3"
@@ -33,7 +36,6 @@
     "@types/node": "^22.14.0",
     "eslint": "^9.24.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "pino-pretty": "^13.0.0",
     "tsup": "^8.4.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1"
